@@ -10,6 +10,8 @@ import static org.folio.rest.persist.PgUtil.postgresClient;
 import static org.folio.rest.support.http.InterfaceUrls.holdingsStorageUrl;
 import static org.folio.rest.support.http.InterfaceUrls.instancesStorageUrl;
 import static org.folio.rest.support.http.InterfaceUrls.itemsStorageUrl;
+import static org.folio.services.migration.MigrationName.ITEM_SHELVING_ORDER_MIGRATION;
+import static org.folio.services.migration.MigrationName.SUBJECT_SERIES_MIGRATION;
 import static org.folio.utility.ModuleUtility.getVertx;
 import static org.folio.utility.RestUtility.TENANT_ID;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -34,6 +36,7 @@ import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 import java.util.stream.IntStream;
 import junitparams.JUnitParamsRunner;
+import lombok.SneakyThrows;
 import org.apache.commons.collections4.map.CaseInsensitiveMap;
 import org.folio.persist.AsyncMigrationJobRepository;
 import org.folio.rest.jaxrs.model.AsyncMigrationJob;
@@ -47,6 +50,7 @@ import org.folio.rest.persist.PostgresClientFuturized;
 import org.folio.rest.support.sql.TestRowStream;
 import org.folio.services.migration.async.AsyncMigrationContext;
 import org.folio.services.migration.async.ShelvingOrderMigrationJobRunner;
+import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
@@ -54,6 +58,14 @@ import org.junit.runner.RunWith;
 public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
 
   private final AsyncMigrationJobRepository repository = getRepository();
+
+  @SneakyThrows
+  @Before
+  public void beforeEach() {
+    StorageTestSuite.deleteAll(itemsStorageUrl(""));
+    StorageTestSuite.deleteAll(holdingsStorageUrl(""));
+    StorageTestSuite.deleteAll(instancesStorageUrl(""));
+  }
 
   private static Map<String, String> okapiHeaders() {
     return new CaseInsensitiveMap<>(Map.of(TENANT.toLowerCase(), TENANT_ID));
@@ -67,7 +79,7 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
     return new AsyncMigrationJob()
       .withJobStatus(IN_PROGRESS)
       .withId(UUID.randomUUID().toString())
-      .withMigrations(Collections.singletonList("itemShelvingOrderMigration"))
+      .withMigrations(Collections.singletonList(ITEM_SHELVING_ORDER_MIGRATION.getValue()))
       .withSubmittedDate(new Date());
   }
 
@@ -83,7 +95,7 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
         .withEffectiveCallNumberComponents(new EffectiveCallNumberComponents().withCallNumber("K1 .M44")))));
 
     var migrationJob = asyncMigration.postMigrationJob(new AsyncMigrationJobRequest()
-      .withMigrations(List.of("itemShelvingOrderMigration")));
+      .withMigrations(List.of(ITEM_SHELVING_ORDER_MIGRATION.getValue())));
 
     await().atMost(25, SECONDS).until(() -> asyncMigration.getMigrationJob(migrationJob.getId())
       .getJobStatus() == AsyncMigrationJob.JobStatus.COMPLETED);
@@ -110,7 +122,8 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
       instancesClient.create(new JsonObject()
         .put("title", "test" + v)
         .put("source", "MARC")
-        .put("instanceTypeId", "30fffe0e-e985-4144-b2e2-1e8179bdb41f")));
+        .put("instanceTypeId", "535e3160-763a-42f9-b0c0-d8ed7df6e2a2"))
+    );
 
     var countDownLatch = new CountDownLatch(1);
 
@@ -123,7 +136,7 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
     await().atMost(5, SECONDS).until(() -> countDownLatch.getCount() == 0L);
 
     var migrationJob = asyncMigration.postMigrationJob(new AsyncMigrationJobRequest()
-      .withMigrations(List.of("subjectSeriesMigration")));
+      .withMigrations(List.of(SUBJECT_SERIES_MIGRATION.getValue())));
 
     await().atMost(25, SECONDS).until(() -> asyncMigration.getMigrationJob(migrationJob.getId())
       .getJobStatus() == AsyncMigrationJob.JobStatus.COMPLETED);
@@ -143,13 +156,14 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
     AsyncMigrations migrations = asyncMigration.getMigrations();
     assertNotNull(migrations);
     assertEquals(Integer.valueOf(2), migrations.getTotalRecords());
-    assertEquals("itemShelvingOrderMigration", migrations.getAsyncMigrations().get(0).getMigrations().get(0));
+    assertEquals(ITEM_SHELVING_ORDER_MIGRATION.getValue(),
+      migrations.getAsyncMigrations().getFirst().getMigrations().getFirst());
   }
 
   @Test
   public void canGetAllAvailableMigrationJobs() {
     asyncMigration.postMigrationJob(new AsyncMigrationJobRequest()
-      .withMigrations(List.of("itemShelvingOrderMigration")));
+      .withMigrations(List.of(ITEM_SHELVING_ORDER_MIGRATION.getValue())));
     AsyncMigrationJobCollection migrations = asyncMigration.getAllMigrationJobs();
     assertNotNull(migrations);
     assertFalse(migrations.getJobs().isEmpty());
@@ -167,7 +181,8 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
     get(repository.save(migrationJob.getId(), migrationJob).toCompletionStage()
       .toCompletableFuture());
     var amc = new AsyncMigrationContext(getContext(), okapiHeaders(), postgresClientFuturized);
-    jobRunner().startAsyncMigration(migrationJob, new AsyncMigrationContext(amc, "itemShelvingOrderMigration"));
+    jobRunner().startAsyncMigration(migrationJob,
+      new AsyncMigrationContext(amc, ITEM_SHELVING_ORDER_MIGRATION.getValue()));
 
     asyncMigration.cancelMigrationJob(migrationJob.getId());
 
@@ -177,7 +192,7 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
     var job = asyncMigration.getMigrationJob(migrationJob.getId());
 
     assertThat(job.getJobStatus(), is(CANCELLED));
-    assertThat(job.getPublished().get(0).getCount(), greaterThanOrEqualTo(1000));
+    assertThat(job.getPublished().getFirst().getCount(), greaterThanOrEqualTo(1000));
   }
 
   private PostgresClientFuturized getPostgresClientFuturized() {
