@@ -5,7 +5,6 @@ import static java.net.HttpURLConnection.HTTP_OK;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.folio.HttpStatus.HTTP_CREATED;
 import static org.folio.HttpStatus.HTTP_UNPROCESSABLE_ENTITY;
-import static org.folio.rest.support.AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY;
 import static org.folio.rest.support.HttpResponseMatchers.errorMessageContains;
 import static org.folio.rest.support.HttpResponseMatchers.errorParametersValueIs;
 import static org.folio.rest.support.HttpResponseMatchers.statusCodeIs;
@@ -38,6 +37,7 @@ import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.arrayContainingInAnyOrder;
 import static org.hamcrest.Matchers.both;
+import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 import static org.hamcrest.Matchers.lessThanOrEqualTo;
 import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
@@ -50,10 +50,10 @@ import static org.junit.Assert.fail;
 import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
 import java.net.URL;
 import java.time.Instant;
 import java.time.ZonedDateTime;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
@@ -71,6 +71,7 @@ import java.util.stream.Stream;
 import junitparams.JUnitParamsRunner;
 import junitparams.Parameters;
 import lombok.SneakyThrows;
+import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.folio.HttpStatus;
@@ -79,8 +80,8 @@ import org.folio.rest.jaxrs.model.Item;
 import org.folio.rest.jaxrs.model.Items;
 import org.folio.rest.jaxrs.model.LastCheckIn;
 import org.folio.rest.jaxrs.model.Note;
+import org.folio.rest.jaxrs.model.RetrieveDto;
 import org.folio.rest.persist.PostgresClient;
-import org.folio.rest.support.AdditionalHttpStatusCodes;
 import org.folio.rest.support.IndividualResource;
 import org.folio.rest.support.JsonArrayHelper;
 import org.folio.rest.support.JsonErrorResponse;
@@ -106,86 +107,6 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
   private final ItemEventMessageChecks itemMessageChecks
     = new ItemEventMessageChecks(KAFKA_CONSUMER);
-
-  private static JsonObject createItemRequest(
-    UUID id,
-    UUID holdingsRecordId,
-    String barcode) {
-
-    return createItemRequest(id, holdingsRecordId, barcode, journalMaterialTypeID);
-  }
-
-  private static JsonObject createItemRequest(
-    UUID id,
-    UUID holdingsRecordId,
-    String barcode,
-    String materialType) {
-
-    JsonObject itemToCreate = new JsonObject();
-
-    if (id != null) {
-      itemToCreate.put("id", id.toString());
-    }
-
-    itemToCreate.put("holdingsRecordId", holdingsRecordId.toString());
-    itemToCreate.put("barcode", barcode);
-    itemToCreate.put("status", new JsonObject().put("name", "Available"));
-    itemToCreate.put("materialTypeId", materialType);
-    itemToCreate.put("permanentLoanTypeId", canCirculateLoanTypeID);
-    itemToCreate.put("temporaryLocationId", ANNEX_LIBRARY_LOCATION_ID.toString());
-    itemToCreate.put("_version", 1);
-
-    return itemToCreate;
-  }
-
-  private static JsonObject smallAngryPlanet(UUID itemId, UUID holdingsRecordId) {
-    return createItemRequest(itemId, holdingsRecordId, "036000291452");
-  }
-
-  private static JsonObject smallAngryPlanet(UUID holdingsRecordId) {
-    return smallAngryPlanet(UUID.randomUUID(), holdingsRecordId);
-  }
-
-  static JsonObject nod(UUID itemId, UUID holdingsRecordId) {
-    return createItemRequest(itemId, holdingsRecordId, "565578437802");
-  }
-
-  static JsonObject nod(UUID holdingsRecordId) {
-    return nod(UUID.randomUUID(), holdingsRecordId);
-  }
-
-  static JsonObject nodWithNoBarcode(UUID holdingsRecordId) {
-    return removeBarcode(nod(holdingsRecordId));
-  }
-
-  private static JsonObject uprooted(UUID itemId, UUID holdingsRecordId) {
-    return createItemRequest(itemId, holdingsRecordId, "657670342075");
-  }
-
-  private static JsonObject uprooted(UUID holdingsRecordId) {
-    return uprooted(UUID.randomUUID(), holdingsRecordId);
-  }
-
-  private static JsonObject temeraire(UUID itemId, UUID holdingsRecordId) {
-    return createItemRequest(itemId, holdingsRecordId, "232142443432");
-  }
-
-  private static JsonObject temeraire(UUID holdingsRecordId) {
-    return temeraire(UUID.randomUUID(), holdingsRecordId);
-  }
-
-  private static JsonObject interestingTimes(UUID itemId, UUID holdingsRecordId) {
-    return createItemRequest(itemId, holdingsRecordId, "56454543534");
-  }
-
-  private static JsonObject interestingTimes(UUID holdingsRecordId) {
-    return interestingTimes(UUID.randomUUID(), holdingsRecordId);
-  }
-
-  static JsonObject removeBarcode(JsonObject item) {
-    item.remove("barcode");
-    return item;
-  }
 
   @SneakyThrows
   @Before
@@ -290,12 +211,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canCreateAnItemViaCollectionResource()
-    throws MalformedURLException,
-    InterruptedException,
-    ExecutionException,
-    TimeoutException {
-
+  public void canCreateAnItemViaCollectionResource() throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     UUID id = UUID.randomUUID();
@@ -331,7 +247,6 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
     itemToCreate.put("statisticalCodeIds", List.of(statisticalCodeId));
 
-    //TODO: Replace with real service point when validated
     itemToCreate.put("inTransitDestinationServicePointId", inTransitServicePointId);
 
     setItemSequence(1);
@@ -515,7 +430,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canReplaceItemWithNewProperties() throws Exception {
+  public void canReplaceItemWithNewProperties() {
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     final UUID id = UUID.randomUUID();
     final String expectedCopyNumber = "copy1";
@@ -608,10 +523,24 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canCreateAnItemWithoutProvidingId()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
+  public void shouldNotUpdateItemIfNoChanges() {
+    var itemId = UUID.randomUUID();
+    var holdingId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
+    var item = createItem(nod(itemId, holdingId));
+    itemMessageChecks.createdMessagePublished(itemId.toString());
 
+    assertThat(update(item).getStatusCode(), is(204));
+
+    var updatedItem = getById(itemId).getJson();
+    //assert that there was no update in database
+    assertThat(updatedItem.getString("_version"), is("1"));
+    var kafkaEvents = KAFKA_CONSUMER.getMessagesForItem(itemId.toString());
+    //assert that there's only CREATE kafka message, no updates
+    assertThat(kafkaEvents.size(), is(1));
+  }
+
+  @Test
+  public void canCreateAnItemWithoutProvidingId() throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     JsonObject itemToCreate = nod(null, holdingsRecordId);
@@ -658,9 +587,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canCreateAnItemWithHridSupplied()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
+  public void canCreateAnItemWithHridSupplied() throws InterruptedException, ExecutionException, TimeoutException {
     log.info("Starting canCreateAnItemWithHRIDSupplied");
 
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
@@ -696,9 +623,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canUpdateAnItemWhenHridHasNotChanged()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
+  public void canUpdateAnItemWhenHridHasNotChanged() {
     log.info("Starting canUpdateAnItemHRIDDoesNotChange");
 
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
@@ -793,9 +718,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
   @Test
   public void cannotAddNonExistentPermanentLocation()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+    throws InterruptedException, ExecutionException, TimeoutException {
     String badLocation = UUID.randomUUID().toString();
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     String id = UUID.randomUUID().toString();
@@ -815,7 +738,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
     Response postResponse = createCompleted.get(TIMEOUT, TimeUnit.SECONDS);
 
-    assertThat(postResponse.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(postResponse.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
 
     assertThat(postResponse.getBody(),
       containsString("Cannot set item.permanentlocationid"));
@@ -823,9 +746,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
   @Test
   public void cannotAddNonExistentTemporaryLocation()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+    throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     String badLocation = UUID.randomUUID().toString();
@@ -846,7 +767,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
     Response postResponse = createCompleted.get(TIMEOUT, TimeUnit.SECONDS);
 
-    assertThat(postResponse.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(postResponse.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
 
     assertThat(postResponse.getBody(),
       containsString("Cannot set item.temporarylocationid"));
@@ -854,9 +775,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
   @Test
   public void cannotCreateAnItemWithIdThatIsNotUuid()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+    throws InterruptedException, ExecutionException, TimeoutException {
     String id = "1234";
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
@@ -877,16 +796,14 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
     Response postResponse = createCompleted.get(TIMEOUT, TimeUnit.SECONDS);
 
-    assertThat(postResponse.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(postResponse.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
 
     assertThat(postResponse.getBody(), containsString("UUID"));
   }
 
   @Test
   public void cannotCreateAnItemWithoutMaterialType()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+    throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     JsonObject itemToCreate = new JsonObject();
@@ -904,7 +821,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
     Response postResponse = createCompleted.get(TIMEOUT, TimeUnit.SECONDS);
 
-    assertThat(postResponse.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(postResponse.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
 
     List<JsonObject> errors = toList(
       postResponse.getJson().getJsonArray("errors"));
@@ -917,9 +834,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
   @Test
   public void cannotCreateAnItemWithNonexistingMaterialType()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+    throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     JsonObject itemToCreate = new JsonObject();
     itemToCreate.put("id", UUID.randomUUID().toString());
@@ -935,7 +850,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
     Response postResponse = createCompleted.get(TIMEOUT, TimeUnit.SECONDS);
 
-    assertThat(postResponse.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(postResponse.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
     assertThat(postResponse.getBody(),
       containsString("Cannot set item.materialtypeid"));
   }
@@ -1023,9 +938,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void cannotCreateAnItemWithDuplicateHrid()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
+  public void cannotCreateAnItemWithDuplicateHrid() throws InterruptedException, ExecutionException, TimeoutException {
     log.info("Starting cannotCreateAnItemWithDuplicateHRID");
 
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
@@ -1056,29 +969,29 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
     final Response postResponse = createCompleted.get(TIMEOUT, TimeUnit.SECONDS);
 
-    assertThat(postResponse.getStatusCode(), is(UNPROCESSABLE_ENTITY));
+    assertThat(postResponse.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
 
     final Errors errors = postResponse.getJson().mapTo(Errors.class);
 
     assertThat(errors, notNullValue());
     assertThat(errors.getErrors(), notNullValue());
-    assertThat(errors.getErrors().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getMessage(),
+    var error = errors.getErrors().getFirst();
+    assertThat(error, notNullValue());
+    assertThat(error.getMessage(),
       is("HRID value already exists in table item: it00000000001"));
-    assertThat(errors.getErrors().get(0).getParameters(), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getKey(),
+    assertThat(error.getParameters(), notNullValue());
+    var parameter = error.getParameters().getFirst();
+    assertThat(parameter, notNullValue());
+    assertThat(parameter.getKey(),
       is("lower(f_unaccent(jsonb ->> 'hrid'::text))"));
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getValue(),
+    assertThat(parameter.getValue(),
       is("it00000000001"));
 
     log.info("Finished cannotCreateAnItemWithDuplicateHRID");
   }
 
   @Test
-  public void cannotCreateAnItemWithHridFailure()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
+  public void cannotCreateAnItemWithHridFailure() throws InterruptedException, ExecutionException, TimeoutException {
     log.info("Starting cannotCreateAnItemWithHRIDFailure");
 
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
@@ -1116,9 +1029,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
   @Test
   public void cannotUpdateAnItemWithNonexistingMaterialType()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+    throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     JsonObject itemToCreate = new JsonObject();
     String itemId = UUID.randomUUID().toString();
@@ -1144,9 +1055,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void cannotUpdateAnItemWithChangedHrid()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
+  public void cannotUpdateAnItemWithChangedHrid() throws InterruptedException, ExecutionException, TimeoutException {
     log.info("Starting cannotUpdateAnItemWithChangedHRID");
 
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
@@ -1179,9 +1088,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void cannotUpdateAnItemWithRemovedHrid()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
+  public void cannotUpdateAnItemWithRemovedHrid() throws InterruptedException, ExecutionException, TimeoutException {
     log.info("Starting cannotUpdateAnItemWithRemovedHRID");
 
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
@@ -1243,10 +1150,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canCreateAnItemWithManyProperties()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+  public void canCreateAnItemWithManyProperties() throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     UUID id = UUID.randomUUID();
@@ -1264,7 +1168,6 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
     itemToCreate.put("temporaryLocationId", ANNEX_LIBRARY_LOCATION_ID.toString());
     itemToCreate.put("tags", new JsonObject().put("tagList", new JsonArray().add(TAG_VALUE)));
 
-    //TODO: Replace with real service point when validated
     itemToCreate.put("inTransitDestinationServicePointId", inTransitServicePointId);
 
     CompletableFuture<Response> createCompleted = new CompletableFuture<>();
@@ -1298,11 +1201,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
   @Test
   public void cannotProvideAdditionalPropertiesInItem()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException {
-
+    throws InterruptedException, TimeoutException, ExecutionException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     JsonObject requestWithAdditionalProperty = nod(UUID.randomUUID(), holdingsRecordId);
@@ -1316,17 +1215,13 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
     JsonErrorResponse response = createCompleted.get(TIMEOUT, TimeUnit.SECONDS);
 
-    assertThat(response.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(response.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
     assertThat(response.getErrors(), hasSoleMessageContaining("Unrecognized field"));
   }
 
   @Test
   public void cannotProvideAdditionalPropertiesInItemStatus()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException {
-
+    throws InterruptedException, TimeoutException, ExecutionException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     JsonObject requestWithAdditionalProperty = nod(UUID.randomUUID(), holdingsRecordId);
@@ -1341,17 +1236,13 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
     JsonErrorResponse response = createCompleted.get(TIMEOUT, TimeUnit.SECONDS);
 
-    assertThat(response.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(response.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
     assertThat(response.getErrors(), hasSoleMessageContaining("Unrecognized field"));
   }
 
   @Test
   public void cannotProvideAdditionalPropertiesInItemLocation()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException {
-
+    throws InterruptedException, TimeoutException, ExecutionException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     JsonObject requestWithAdditionalProperty = nod(UUID.randomUUID(), holdingsRecordId);
@@ -1366,7 +1257,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
     JsonErrorResponse response = createCompleted.get(TIMEOUT, TimeUnit.SECONDS);
 
-    assertThat(response.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(response.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
     assertThat(response.getErrors(), hasSoleMessageContaining("Unrecognized field"));
   }
 
@@ -1379,7 +1270,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
     }
 
     itemsArray.stream()
-      .map(obj -> (JsonObject) obj)
+      .map(JsonObject.class::cast)
       .map(obj -> getById(obj.getString("id")).getJson())
       .forEach(itemMessageChecks::createdMessagePublished);
   }
@@ -1546,14 +1437,16 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
     assertThat(errors, notNullValue());
     assertThat(errors.getErrors(), notNullValue());
-    assertThat(errors.getErrors().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getMessage(),
+    var error = errors.getErrors().getFirst();
+    assertThat(error, notNullValue());
+    assertThat(error.getMessage(),
       is("HRID value already exists in table item: it00000000001"));
-    assertThat(errors.getErrors().get(0).getParameters(), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getKey(),
+    assertThat(error.getParameters(), notNullValue());
+    var parameter = error.getParameters().getFirst();
+    assertThat(parameter, notNullValue());
+    assertThat(parameter.getKey(),
       is("lower(f_unaccent(jsonb ->> 'hrid'::text))"));
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getValue(),
+    assertThat(parameter.getValue(),
       is("it00000000001"));
 
     for (int i = 0; i < itemsArray.size(); i++) {
@@ -1584,10 +1477,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canReplaceAnItemAtSpecificLocation()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+  public void canReplaceAnItemAtSpecificLocation() throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     UUID id = UUID.randomUUID();
@@ -1633,10 +1523,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canPlaceAnItemInTransit()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+  public void canPlaceAnItemInTransit() throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     UUID id = UUID.randomUUID();
@@ -1685,9 +1572,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
   @Test
   public void checkIfStatusDateExistsWhenItemStatusUpdated()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+    throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     UUID id = UUID.randomUUID();
@@ -1727,9 +1612,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
   @Test
   public void checkIfStatusDateChangesWhenItemStatusUpdated()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+    throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     UUID id = UUID.randomUUID();
@@ -1799,7 +1682,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void cannotUpdateStatusDate() throws Exception {
+  public void cannotUpdateStatusDate() {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     UUID id = UUID.randomUUID();
     JsonObject itemToCreate = smallAngryPlanet(id, holdingsRecordId);
@@ -1831,7 +1714,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void cannotChangeStatusDate() throws Exception {
+  public void cannotChangeStatusDate() {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     UUID id = UUID.randomUUID();
     JsonObject itemToCreate = smallAngryPlanet(id, holdingsRecordId);
@@ -1858,7 +1741,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void statusUpdatedDateRemainsAfterUpdate() throws Exception {
+  public void statusUpdatedDateRemainsAfterUpdate() {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     UUID id = UUID.randomUUID();
     JsonObject itemToCreate = smallAngryPlanet(id, holdingsRecordId);
@@ -1892,7 +1775,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void statusUpdatedDateIsUnchangedAfterUpdatesThatDoNotChangeStatus() throws Exception {
+  public void statusUpdatedDateIsUnchangedAfterUpdatesThatDoNotChangeStatus() {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     UUID id = UUID.randomUUID();
     JsonObject itemToCreate = smallAngryPlanet(id, holdingsRecordId)
@@ -1936,9 +1819,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canDeleteAnItem() throws InterruptedException,
-    MalformedURLException, TimeoutException, ExecutionException {
-
+  public void canDeleteAnItem() throws InterruptedException, TimeoutException, ExecutionException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     UUID id = UUID.randomUUID();
@@ -1968,12 +1849,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canPageAllItems()
-    throws MalformedURLException,
-    InterruptedException,
-    ExecutionException,
-    TimeoutException {
-
+  public void canPageAllItems() throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     createItem(smallAngryPlanet(UUID.randomUUID(), holdingsRecordId));
@@ -2011,6 +1887,80 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
+  public void canRetrieveItemsViaPost() throws InterruptedException, ExecutionException, TimeoutException {
+    UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
+
+    List<String> itemIds = new ArrayList<>();
+    int numOfItemsToCreate = 5;
+    for (int i = 1; i <= numOfItemsToCreate; i++) {
+      JsonObject itemCreateRequest = createItemRequest(UUID.randomUUID(), holdingsRecordId,
+              RandomStringUtils.insecure().next(10));
+      String itemId = createItem(itemCreateRequest).getString("id");
+      itemIds.add(itemId);
+    }
+
+    String idzWithOrDelimiter = "id==(" + String.join(" or ", itemIds) + ")";
+    RetrieveDto retrieveDto = new RetrieveDto();
+    retrieveDto.setQuery(idzWithOrDelimiter);
+    retrieveDto.setLimit(2000);
+
+    CompletableFuture<Response> responseHandler = new CompletableFuture<>();
+    getClient().post(itemsStorageUrl("/retrieve"), retrieveDto, TENANT_ID,
+            ResponseHandler.json(responseHandler));
+
+    Response response = responseHandler.get(TIMEOUT, TimeUnit.SECONDS);
+    assertThat(response.getStatusCode(), is(200));
+
+    JsonObject responseJson = response.getJson();
+    JsonArray responseItems = responseJson.getJsonArray("items");
+
+    assertThat(responseItems.size(), is(numOfItemsToCreate));
+    assertThat(responseJson.getInteger("totalRecords"), is(numOfItemsToCreate));
+  }
+
+  @Test
+  public void canPageAllRetrieveItemsViaPost() throws InterruptedException, ExecutionException, TimeoutException {
+    UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
+
+    createItem(smallAngryPlanet(UUID.randomUUID(), holdingsRecordId));
+    createItem(nod(UUID.randomUUID(), holdingsRecordId));
+    createItem(uprooted(UUID.randomUUID(), holdingsRecordId));
+    createItem(temeraire(UUID.randomUUID(), holdingsRecordId));
+    createItem(interestingTimes(UUID.randomUUID(), holdingsRecordId));
+
+    final CompletableFuture<Response> firstPageCompleted = new CompletableFuture<>();
+    final CompletableFuture<Response> secondPageCompleted = new CompletableFuture<>();
+
+    RetrieveDto retrieveDto = new RetrieveDto();
+    retrieveDto.setLimit(3);
+    getClient().post(itemsStorageUrl("/retrieve"), retrieveDto, TENANT_ID,
+            ResponseHandler.json(firstPageCompleted));
+
+    retrieveDto.setLimit(3);
+    retrieveDto.setOffset(3);
+    getClient().post(itemsStorageUrl("/retrieve"), retrieveDto, TENANT_ID,
+            ResponseHandler.json(secondPageCompleted));
+
+    Response firstPageResponse = firstPageCompleted.get(TIMEOUT, TimeUnit.SECONDS);
+    Response secondPageResponse = secondPageCompleted.get(TIMEOUT, TimeUnit.SECONDS);
+
+    assertThat(firstPageResponse.getStatusCode(), is(200));
+    assertThat(secondPageResponse.getStatusCode(), is(200));
+
+    JsonObject firstPage = firstPageResponse.getJson();
+    JsonObject secondPage = secondPageResponse.getJson();
+
+    JsonArray firstPageItems = firstPage.getJsonArray("items");
+    JsonArray secondPageItems = secondPage.getJsonArray("items");
+
+    assertThat(firstPageItems.size(), is(3));
+    assertThat(firstPage.getInteger("totalRecords"), is(5));
+
+    assertThat(secondPageItems.size(), is(2));
+    assertThat(secondPage.getInteger("totalRecords"), is(5));
+  }
+
+  @Test
   public void canCreateMultipleItemsWithoutBarcode() throws Exception {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     createItem(removeBarcode(nod(holdingsRecordId)));
@@ -2021,7 +1971,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void cannotCreateItemWithDuplicateBarcode() throws Exception {
+  public void cannotCreateItemWithDuplicateBarcode() {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     createItem(nod(holdingsRecordId).put("barcode", "9876a"));
     assertThat(itemsClient.attemptToCreate(uprooted(holdingsRecordId).put("barcode", "9876a")),
@@ -2031,7 +1981,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void cannotUpdateItemWithDuplicateBarcode() throws Exception {
+  public void cannotUpdateItemWithDuplicateBarcode() {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     createItem(uprooted(holdingsRecordId).put("barcode", "9876a"));
     UUID nodId = UUID.randomUUID();
@@ -2071,12 +2021,10 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canSearchForItemsByTags() throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+  public void canSearchForItemsByTags() throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
-    createItem(addTags(TAG_VALUE, holdingsRecordId));
+    createItem(addTags(holdingsRecordId));
     createItem(nod(holdingsRecordId));
 
     CompletableFuture<Response> searchCompleted = new CompletableFuture<>();
@@ -2106,9 +2054,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canSearchForItemsByStatus() throws MalformedURLException,
-    InterruptedException, ExecutionException, TimeoutException {
-
+  public void canSearchForItemsByStatus() throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     createItem(smallAngryPlanet(UUID.randomUUID(), holdingsRecordId));
@@ -2139,11 +2085,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
 
   @Test
   public void cannotSearchForItemsByBarcodeAndNotMatchingId()
-    throws MalformedURLException,
-    InterruptedException,
-    ExecutionException,
-    TimeoutException {
-
+    throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     createItem(nod(holdingsRecordId));
@@ -2186,9 +2128,10 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
     CompletableFuture<Response> searchCompleted = new CompletableFuture<>();
 
     // StackOverflowError in java.util.regex.Pattern https://issues.folio.org/browse/CIRC-119
-    String url = itemsStorageUrl("") + "?query=" + urlEncode("barcode==("
-      + "a or b or c or d or e or f or g or h or j or k or l or m or n or o or p or q or s "
-      + "or t or u or v or w or x or y or z or 673274826203)");
+    String url = itemsStorageUrl("") + "?query="
+                 + urlEncode("barcode==("
+                             + "a or b or c or d or e or f or g or h or j or k or l or m or n or o or p or q or s "
+                             + "or t or u or v or w or x or y or z or 673274826203)");
 
     getClient().get(url,
       TENANT_ID, ResponseHandler.json(searchCompleted));
@@ -2217,7 +2160,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
     Item itemWithAllLocation = buildItem(holdingsWithTempLocation, SECOND_FLOOR_LOCATION_ID, ONLINE_LOCATION_ID);
 
     Item[] itemsToCreate = {itemWithHoldingPermLocation, itemWithHoldingTempLocation,
-      itemWithTempLocation, itemWithPermLocation, itemWithAllLocation};
+                            itemWithTempLocation, itemWithPermLocation, itemWithAllLocation};
 
     for (Item item : itemsToCreate) {
       IndividualResource createdItem = createItem(item);
@@ -2230,10 +2173,10 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
     final Items secondFloorLibraryItems = findItems("effectiveLocationId=" + SECOND_FLOOR_LOCATION_ID);
 
     assertEquals(1, mainLibraryItems.getTotalRecords().intValue());
-    assertThat(mainLibraryItems.getItems().get(0).getId(), is(itemWithHoldingPermLocation.getId()));
+    assertThat(mainLibraryItems.getItems().getFirst().getId(), is(itemWithHoldingPermLocation.getId()));
 
     assertEquals(1, annexLibraryItems.getTotalRecords().intValue());
-    assertThat(annexLibraryItems.getItems().get(0).getId(), is(itemWithHoldingTempLocation.getId()));
+    assertThat(annexLibraryItems.getItems().getFirst().getId(), is(itemWithHoldingTempLocation.getId()));
 
     assertEquals(2, onlineLibraryItems.getTotalRecords().intValue());
 
@@ -2244,16 +2187,12 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
       hasItems(itemWithTempLocation.getId(), itemWithAllLocation.getId()));
 
     assertEquals(1, secondFloorLibraryItems.getTotalRecords().intValue());
-    assertThat(secondFloorLibraryItems.getItems().get(0).getId(), is(itemWithPermLocation.getId()));
+    assertThat(secondFloorLibraryItems.getItems().getFirst().getId(), is(itemWithPermLocation.getId()));
   }
 
   @Test
   public void cannotSearchForItemsUsingDefaultField()
-    throws MalformedURLException,
-    InterruptedException,
-    ExecutionException,
-    TimeoutException {
-
+    throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     createItem(smallAngryPlanet(holdingsRecordId));
@@ -2280,12 +2219,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canDeleteAllItems()
-    throws MalformedURLException,
-    InterruptedException,
-    ExecutionException,
-    TimeoutException {
-
+  public void canDeleteAllItems() throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     createItem(smallAngryPlanet(holdingsRecordId));
@@ -2368,10 +2302,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void tenantIsRequiredForCreatingNewItem()
-    throws MalformedURLException, InterruptedException,
-    ExecutionException, TimeoutException {
-
+  public void tenantIsRequiredForCreatingNewItem() throws InterruptedException, ExecutionException, TimeoutException {
     UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     CompletableFuture<Response> postCompleted = new CompletableFuture<>();
@@ -2487,7 +2418,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
     assertThat(updateResponse.getStatusCode(), is(422));
     assertThat(updateResponse.getErrors().size(), is(1));
 
-    JsonObject error = updateResponse.getErrors().get(0);
+    JsonObject error = updateResponse.getErrors().getFirst();
     assertThat(error.getString("message"), anyOf(is("may not be null"), is("must not be null")));
     assertThat(error.getJsonArray("parameters").getJsonObject(0).getString("key"),
       is("status"));
@@ -2519,7 +2450,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
     assertThat(updateResponse.getStatusCode(), is(422));
     assertThat(updateResponse.getErrors().size(), is(1));
 
-    JsonObject error = updateResponse.getErrors().get(0);
+    JsonObject error = updateResponse.getErrors().getFirst();
     assertThat(error.getString("message"), anyOf(is("may not be null"), is("must not be null")));
     assertThat(error.getJsonArray("parameters").getJsonObject(0).getString("key"),
       is("status.name"));
@@ -2578,7 +2509,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
     "Unknown",
     "Withdrawn"
   })
-  public void canCreateItemWithAllAllowedStatuses(String status) throws Exception {
+  public void canCreateItemWithAllAllowedStatuses(String status) {
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     final ItemRequestBuilder itemToCreate = new ItemRequestBuilder()
@@ -2596,7 +2527,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canFilterByFullCallNumber() throws Exception {
+  public void canFilterByFullCallNumber() {
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     final IndividualResource itemWithWholeCallNumber = itemsClient.create(
@@ -2630,11 +2561,11 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
       .getMany("fullCallNumber == \"%s\"", "prefix callNumber suffix");
 
     assertThat(foundItems.size(), is(1));
-    assertThat(foundItems.get(0).getId(), is(itemWithWholeCallNumber.getId()));
+    assertThat(foundItems.getFirst().getId(), is(itemWithWholeCallNumber.getId()));
   }
 
   @Test
-  public void canFilterByCallNumberAndSuffix() throws Exception {
+  public void canFilterByCallNumberAndSuffix() {
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     final IndividualResource itemWithWholeCallNumber = itemsClient.create(
@@ -2676,7 +2607,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void cannotCreateItemWithNonExistentHoldingsRecordId() throws Exception {
+  public void cannotCreateItemWithNonExistentHoldingsRecordId() {
     final UUID nonExistentHoldingsRecordId = UUID.randomUUID();
 
     final JsonObject itemToCreate = new ItemRequestBuilder()
@@ -2693,7 +2624,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void cannotBatchCreateItemsWithNonExistentHoldingsRecordId() throws Exception {
+  public void cannotBatchCreateItemsWithNonExistentHoldingsRecordId() {
     final String nonExistentHoldingsRecordId = UUID.randomUUID().toString();
     final JsonArray items = threeItems();
 
@@ -2709,7 +2640,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canSearchByDiscoverySuppressProperty() throws Exception {
+  public void canSearchByDiscoverySuppressProperty() {
     final UUID holdingsId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     final IndividualResource suppressedItem = itemsClient.create(
@@ -2725,7 +2656,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
       .getMany("cql.allRecords=1 not %s==true", DISCOVERY_SUPPRESS);
 
     assertThat(suppressedItems.size(), is(1));
-    assertThat(suppressedItems.get(0).getId(), is(suppressedItem.getId()));
+    assertThat(suppressedItems.getFirst().getId(), is(suppressedItem.getId()));
 
     assertThat(notSuppressedItems.size(), is(2));
     assertThat(notSuppressedItems.stream()
@@ -2735,7 +2666,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void shouldFindItemByCallNumberWhenThereIsSuffix() throws Exception {
+  public void shouldFindItemByCallNumberWhenThereIsSuffix() {
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     final IndividualResource firstItemToMatch = itemsClient.create(
@@ -2771,7 +2702,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void explicitRightTruncationCanBeApplied() throws Exception {
+  public void explicitRightTruncationCanBeApplied() {
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     final IndividualResource firstItemToMatch = itemsClient.create(
@@ -2817,7 +2748,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void canSearchByPurchaseOrderLineIdentifierProperty() throws Exception {
+  public void canSearchByPurchaseOrderLineIdentifierProperty() {
     final UUID holdingsId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
 
     final IndividualResource firstItem = itemsClient.create(
@@ -2830,11 +2761,11 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
       .getMany("purchaseOrderLineIdentifier==\"poli-1\"");
 
     assertThat(poli1Items.size(), is(1));
-    assertThat(poli1Items.get(0).getId(), is(firstItem.getId()));
+    assertThat(poli1Items.getFirst().getId(), is(firstItem.getId()));
   }
 
   @Test
-  public void cannotCreateItemWithNonExistentStatisticalCodeId() throws Exception {
+  public void cannotCreateItemWithNonExistentStatisticalCodeId() {
     final UUID holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     final UUID nonExistentStatisticalCodeId = UUID.randomUUID();
     final String status = "Available";
@@ -2847,25 +2778,22 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
       .withStatisticalCodeIds(List.of(nonExistentStatisticalCodeId))
       .create();
 
-    final String itemId = itemToCreate.getString("id");
-
     final Response createdItem = itemsClient.attemptToCreate(itemToCreate);
 
     String expectedMessage = String.format(
-      "statistical code doesn't exist: %s foreign key violation in statisticalCodeIds array of item with id=%s",
-      nonExistentStatisticalCodeId,
-      itemId
+      "Cannot set item.statistical_code_id = %s because it does not exist in statistical_code.id.",
+      nonExistentStatisticalCodeId
     );
 
     assertThat(createdItem, hasValidationError(
       expectedMessage,
-      "item",
-      itemId
+      "item.statistical_code_id",
+      nonExistentStatisticalCodeId.toString()
     ));
   }
 
   @Test
-  public void canCreateItemWithMultipleStatisticalCodeIds() throws Exception {
+  public void canCreateItemWithMultipleStatisticalCodeIds() {
     final var firstStatisticalCode = statisticalCodeFixture
       .createSerialManagementCode(new StatisticalCodeBuilder()
         .withCode("stcone")
@@ -2904,7 +2832,7 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
   }
 
   @Test
-  public void cannotCreateItemWithAtLeastOneNonExistentStatisticalCodeId() throws Exception {
+  public void cannotCreateItemWithAtLeastOneNonExistentStatisticalCodeId() {
     final var statisticalCode = statisticalCodeFixture
       .createSerialManagementCode(new StatisticalCodeBuilder()
         .withCode("stcone")
@@ -2931,20 +2859,17 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
       ))
       .create();
 
-    final String itemId = itemToCreate.getString("id");
-
     final Response createdItem = itemsClient.attemptToCreate(itemToCreate);
 
     String expectedMessage = String.format(
-      "statistical code doesn't exist: %s foreign key violation in statisticalCodeIds array of item with id=%s",
-      nonExistentStatisticalCodeId,
-      itemId
+      "Cannot set item.statistical_code_id = %s because it does not exist in statistical_code.id.",
+      nonExistentStatisticalCodeId
     );
 
     assertThat(createdItem, hasValidationError(
       expectedMessage,
-      "item",
-      itemId
+      "item.statistical_code_id",
+      nonExistentStatisticalCodeId.toString()
     ));
   }
 
@@ -3006,12 +2931,93 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
       ResponseHandler.text(completed));
     Response response = completed.get(TIMEOUT, TimeUnit.SECONDS);
 
+    String expectedMessage = String.format(
+      "Cannot set item statistical_code_id = %s because it does not exist in statistical_code.id.",
+      nonExistentStatisticalCodeId
+    );
+
     assertThat(response.getStatusCode(), is(HttpURLConnection.HTTP_BAD_REQUEST));
-    assertThat(response.getBody(), allOf(
-      containsString("statistical code doesn't exist:"),
-      containsString(nonExistentStatisticalCodeId.toString()),
-      containsString("foreign key violation in statisticalCodeIds array of item"),
-      containsString(itemId)));
+    assertThat(response.getBody(), equalTo(expectedMessage));
+  }
+
+  static JsonObject nod(UUID itemId, UUID holdingsRecordId) {
+    return createItemRequest(itemId, holdingsRecordId, "565578437802");
+  }
+
+  static JsonObject nod(UUID holdingsRecordId) {
+    return nod(UUID.randomUUID(), holdingsRecordId);
+  }
+
+  static JsonObject nodWithNoBarcode(UUID holdingsRecordId) {
+    return removeBarcode(nod(holdingsRecordId));
+  }
+
+  static JsonObject removeBarcode(JsonObject item) {
+    item.remove("barcode");
+    return item;
+  }
+
+  private static JsonObject createItemRequest(
+    UUID id,
+    UUID holdingsRecordId,
+    String barcode) {
+
+    return createItemRequest(id, holdingsRecordId, barcode, journalMaterialTypeID);
+  }
+
+  private static JsonObject createItemRequest(
+    UUID id,
+    UUID holdingsRecordId,
+    String barcode,
+    String materialType) {
+
+    JsonObject itemToCreate = new JsonObject();
+
+    if (id != null) {
+      itemToCreate.put("id", id.toString());
+    }
+
+    itemToCreate.put("holdingsRecordId", holdingsRecordId.toString());
+    itemToCreate.put("barcode", barcode);
+    itemToCreate.put("status", new JsonObject().put("name", "Available"));
+    itemToCreate.put("materialTypeId", materialType);
+    itemToCreate.put("permanentLoanTypeId", canCirculateLoanTypeID);
+    itemToCreate.put("temporaryLocationId", ANNEX_LIBRARY_LOCATION_ID.toString());
+    itemToCreate.put("_version", 1);
+
+    return itemToCreate;
+  }
+
+  private static JsonObject smallAngryPlanet(UUID itemId, UUID holdingsRecordId) {
+    return createItemRequest(itemId, holdingsRecordId, "036000291452");
+  }
+
+  private static JsonObject smallAngryPlanet(UUID holdingsRecordId) {
+    return smallAngryPlanet(UUID.randomUUID(), holdingsRecordId);
+  }
+
+  private static JsonObject uprooted(UUID itemId, UUID holdingsRecordId) {
+    return createItemRequest(itemId, holdingsRecordId, "657670342075");
+  }
+
+  private static JsonObject uprooted(UUID holdingsRecordId) {
+    return uprooted(UUID.randomUUID(), holdingsRecordId);
+  }
+
+  private static JsonObject temeraire(UUID itemId, UUID holdingsRecordId) {
+    return createItemRequest(itemId, holdingsRecordId, "232142443432");
+  }
+
+  private static JsonObject temeraire(UUID holdingsRecordId) {
+    return temeraire(UUID.randomUUID(), holdingsRecordId);
+  }
+
+  private static JsonObject interestingTimes(UUID itemId, UUID holdingsRecordId) {
+    return createItemRequest(itemId, holdingsRecordId, "56454543534");
+  }
+
+  private static JsonObject interestingTimes(UUID holdingsRecordId) {
+    return interestingTimes(UUID.randomUUID(), holdingsRecordId);
   }
 
   private JsonArray threeItems() {
@@ -3115,11 +3121,11 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
     assertThat(cql, items.getTotalRecords(), is(barcodes.length));
   }
 
-  private JsonObject addTags(String tagValue, UUID holdingsRecordId) {
+  private JsonObject addTags(UUID holdingsRecordId) {
     return smallAngryPlanet(holdingsRecordId)
       .put("tags", new JsonObject()
         .put("tagList", new JsonArray()
-          .add(tagValue)));
+          .add(ItemStorageTest.TAG_VALUE)));
   }
 
   private void setItemSequence(long sequenceNumber) {
@@ -3158,12 +3164,10 @@ public class ItemStorageTest extends TestBaseWithInventoryUtil {
     return secondTime.isAfter(firstTime);
   }
 
-  private List<UUID> searchByCallNumberEyeReadable(String searchTerm)
-    throws InterruptedException, MalformedURLException, TimeoutException, ExecutionException {
-
+  private List<UUID> searchByCallNumberEyeReadable(String searchTerm) {
     return itemsClient
       .getMany("fullCallNumber==\"%1$s\" OR callNumberAndSuffix==\"%1$s\" OR "
-        + "effectiveCallNumberComponents.callNumber==\"%1$s\"", searchTerm)
+               + "effectiveCallNumberComponents.callNumber==\"%1$s\"", searchTerm)
       .stream()
       .map(IndividualResource::getId)
       .toList();
